# pad

./: CMakeLists.txt  README.md  hid.c  main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
gui/: 69-pubby-hid.rules  Makefile  README.md  main.c  pubby-pad
gui-linux/: Makefile  main.c
